<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_info_bg"
    android:orientation="vertical"
    android:padding="4dip">

    <TextView
        android:id="@+id/dialog_bwtittle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/dialog_bwmima_et1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/jz_mingxi_subtittle"
        android:gravity="top"
        android:hint="@string/jz_jiami_hint1"
        android:inputType="number"
        android:isScrollContainer="true"
        android:maxLength="6"
        android:singleLine="true" />

    <EditText
        android:id="@+id/dialog_bwmima_et2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/jz_mingxi_subtittle"
        android:gravity="top"
        android:hint="@string/jz_jiami_hint2"
        android:inputType="number"
        android:isScrollContainer="true"
        android:maxLength="6"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialog_bwmima_queding_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/jz_addbt_selector"
            android:text="@string/jz_tab2_queding"
            android:textColor="#000000" />

        <Button
            android:id="@+id/dialog_bwmima_shanchu_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/jz_addbt_selector"
            android:text="@string/js_shanchu"
            android:textColor="#000000" />

        <Button
            android:id="@+id/dialog_bwmima_quxiao_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/jz_addbt_selector"
            android:text="@string/jz_add_quxiao"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>