<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_info_bg"
    android:orientation="vertical"
    android:padding="4dip">

    <EditText
        android:id="@+id/dialog_et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/jz_mingxi_subtittle"
        android:gravity="top"
        android:hint="@string/dialog_mima"
        android:inputType="number"
        android:isScrollContainer="true"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialog_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="12.88"
            android:background="@drawable/journal_detail_btn_summerize_selector"
            android:text="@string/jz_tab2_queding"
            android:textColor="#000000" />

        <Button
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="10dp"
            android:layout_weight="12.88"
            android:background="@drawable/journal_detail_btn_summerize_selector"
            android:text="@string/jz_add_quxiao"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>